kubernates/longhorn/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn
  namespace: longhorn-system
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`longhorn.srv-prod-3.local.latansatech.my.id`)
      kind: Rule
      services:
        - name: longhorn-frontend
          port: 80
  tls:
    secretName: srv-prod-3.local-latansatech-my-id-tls
